--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runner</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="welcome-style.css">
 </head>
 <body>
-    <img src="button_1.svg" id="pianoButton1">
-    <img src="button_2.svg" id="pianoButton2">
-    <img src="button_3.svg" id="pianoButton3">
-    <img src="button_4.svg" id="pianoButton4">
-    <script src="app.js"></script>
+    <div class="welcome-container">
+        <h1>This is Runner...</h1>
+        <p>The starting piano of "Runaway" by Kanye West. Press the buttons to play the piano sounds.</p>
+        <button id="getStartedButton">Get Started</button>
+        <div class="tip">
+            <p><strong>Tip:</strong> Press 1 (15 times) then 2 then 1 (3 times) then 3 ...then 4.!</p>
+        </div>
+    </div>
+    <footer>
+        <p>Made by <a href="https://github.com/askadityapandey" target="_blank"> Aditya</a></p>
+    </footer>
 
+    <script src="welcome-script.js"></script>
 </body>
 </html>
